--- a/.classpath
+++ b/.classpath
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="External Jars/browsermob-proxy-2.0-beta-8.jar"/>
-	<classpathentry kind="lib" path="External Jars/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="External Jars/httpclient-4.3.6.jar"/>
-	<classpathentry kind="lib" path="External Jars/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="External Jars/opencsv-3.2.jar"/>
-	<classpathentry kind="lib" path="External Jars/phantomjsdriver-1.2.1.jar"/>
-	<classpathentry kind="lib" path="External Jars/selenium-java-2.44.0.jar"/>
-	<classpathentry kind="lib" path="External Jars/selenium-server-standalone-2.44.0.jar"/>
-	<classpathentry kind="lib" path="External Jars/slf4j-api-1.7.10.jar"/>
-	<classpathentry kind="lib" path="External Jars/slf4j-simple-1.7.10.jar"/>
-	<classpathentry kind="lib" path="External Jars/google-collections.jar"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="External Jars/google-collections-1.0.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
