--- a/pom.xml
+++ b/pom.xml
@@ -105,4 +105,14 @@
      		<version>2.0b1</version>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+    <repository>
+        <id>repo</id>
+        <url>https://github.com/sekart91/WebDriverBase/tree/master/releases</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshot-repo</id>
+        <url>https://github.com/sekart91/WebDriverBase/tree/master/snapshots</url>
+    </snapshotRepository>
+</distributionManagement>
 </project>
