--- a/pom.xml
+++ b/pom.xml
@@ -7,50 +7,50 @@
   <description>Web Driver Framework based on selenium</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source/>
-          <target/>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-         <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>1.7.10</version>
-            </dependency>
-            <dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-simple</artifactId>
-				<version>1.7.10</version>
-			</dependency>      
-			<dependency>
-      			<groupId>org.testng</groupId>
-      			<artifactId>testng</artifactId>
-      			<version>6.8.21</version>
-      			<optional>false</optional>
-    		</dependency>
-    		<dependency>
-    			<groupId>org.seleniumhq.selenium</groupId>
-      			<artifactId>selenium-java</artifactId>
-      			<version>2.45.0</version>
-      			<optional>false</optional>
-    		</dependency>
-    		<dependency>
-			<groupId>org.apache.maven.surefire</groupId>
+	    <resources>
+	      <resource>
+	        <directory>src</directory>
+	        <excludes>
+	          <exclude>**/*.java</exclude>
+	        </excludes>
+	      </resource>
+    	</resources>
+	    <plugins>
+	      <plugin>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        	<version>3.1</version>
+		        <configuration>
+		          <source/>
+		          <target/>
+		        </configuration>
+      		</plugin>
+    	</plugins>
+  	</build>
+  	<dependencies>
+		<dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-api</artifactId>
+	        <version>1.7.10</version>
+	    </dependency>
+	    <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.10</version>
+		</dependency>      
+		<dependency>
+				<groupId>org.testng</groupId>
+				<artifactId>testng</artifactId>
+				<version>6.8.21</version>
+				<optional>false</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+				<artifactId>selenium-java</artifactId>
+				<version>2.45.0</version>
+				<optional>false</optional>
+		</dependency>
+		<dependency>
+		<groupId>org.apache.maven.surefire</groupId>
 			<artifactId>surefire-testng</artifactId>
 			<version>2.16</version>
 		</dependency>
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>com.github.detro.ghostdriver</groupId>
 			<artifactId>phantomjsdriver</artifactId>
-			<version>1.0.1</version>
+			<version>1.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.opencsv</groupId>
@@ -78,6 +78,11 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-server</artifactId>
 			<version>2.44.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-remote-driver</artifactId>
+			<version>2.43.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -100,19 +105,55 @@
 			<version>2.44.0</version>
 		</dependency>
 		<dependency>
-      		<groupId>org.seleniumhq.selenium</groupId>
-      		<artifactId>selenium-common</artifactId>
-     		<version>2.0b1</version>
+	  		<groupId>org.seleniumhq.selenium</groupId>
+	  		<artifactId>selenium-common</artifactId>
+	 		<version>2.0b1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.3.3</version>
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-chrome-driver</artifactId>
+			<version>2.44.0</version>
+		</dependency>
+			<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>15.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server-standalone</artifactId>
+			<version>2.41.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
+	<repositories>
+	   <repository>
+	    <id>jenkins-releases</id>
+	    <url>http://repo.jenkins-ci.org/releases/</url>
+	  </repository>
+	</repositories>
 	<distributionManagement>
-    <repository>
-        <id>repo</id>
-        <url>https://github.com/sekart91/WebDriverBase/tree/master/releases</url>
-    </repository>
-    <snapshotRepository>
-        <id>snapshot-repo</id>
-        <url>https://github.com/sekart91/WebDriverBase/tree/master/snapshots</url>
-    </snapshotRepository>
-</distributionManagement>
-</project>
+	    <repository>
+	        <id>repo</id>
+	        <url>https://github.com/sekart91/WebDriverBase/tree/master/releases</url>
+	    </repository>
+	    <snapshotRepository>
+	        <id>snapshot-repo</id>
+	        <url>https://github.com/sekart91/WebDriverBase/tree/master/snapshots</url>
+	    </snapshotRepository>
+	</distributionManagement>
+</project>s
