--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>WebDriverBase</groupId>
-  <artifactId>WebDriverBase</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
-  <name>WebDriverBase</name>
+  <groupId>com.solutionstar</groupId>
+  <artifactId>swaftee</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>Swaftee</name>
   <description>Web Driver Framework based on selenium</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -38,36 +38,20 @@
 			<version>1.7.10</version>
 		</dependency>      
 		<dependency>
-				<groupId>org.testng</groupId>
-				<artifactId>testng</artifactId>
-				<version>6.8.21</version>
-				<optional>false</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-				<artifactId>selenium-java</artifactId>
-				<version>2.45.0</version>
-				<optional>false</optional>
-		</dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.21</version>
+			<optional>false</optional>
+		</dependency>		
 		<dependency>
 		<groupId>org.apache.maven.surefire</groupId>
 			<artifactId>surefire-testng</artifactId>
 			<version>2.16</version>
 		</dependency>
 		<dependency>
-			<groupId>org.browsermob</groupId>
-			<artifactId>browsermob-proxy</artifactId>
-			<version>2.0-beta-2</version>
-		</dependency>
-		<dependency>
 			<groupId>net.lightbody.bmp</groupId>
 			<artifactId>browsermob-proxy</artifactId>
 			<version>2.0-beta-8</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.detro.ghostdriver</groupId>
-			<artifactId>phantomjsdriver</artifactId>
-			<version>1.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.opencsv</groupId>
@@ -76,18 +60,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-server</artifactId>
-			<version>2.44.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-remote-driver</artifactId>
 			<version>2.43.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-api</artifactId>
-			<version>2.15.0</version>
+			<artifactId>selenium-java</artifactId>
+			<version>2.45.0</version>
+			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -98,6 +78,11 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-support</artifactId>
 			<version>2.44.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server-standalone</artifactId>
+			<version>2.41.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -120,24 +105,29 @@
 			<version>4.3.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-chrome-driver</artifactId>
-			<version>2.44.0</version>
-		</dependency>
-			<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>15.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-server-standalone</artifactId>
-			<version>2.41.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.google.collections</groupId>
 			<artifactId>google-collections</artifactId>
 			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-chrome-driver</artifactId>
+			<version>2.44.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.detro.ghostdriver</groupId>
+			<artifactId>phantomjsdriver</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-ie-driver</artifactId>
+			<version>2.44.0</version>
 		</dependency>
 	</dependencies>
 	<repositories>
@@ -156,4 +146,4 @@
 	        <url>https://github.com/sekart91/WebDriverBase/tree/master/snapshots</url>
 	    </snapshotRepository>
 	</distributionManagement>
-</project>s
+</project>
