--- a/pom.xml
+++ b/pom.xml
@@ -129,12 +129,21 @@
 			<artifactId>selenium-ie-driver</artifactId>
 			<version>2.44.0</version>
 		</dependency>
+		<dependency>
+  			<groupId>net.jsourcerer.webdriver</groupId>
+  			<artifactId>JSErrorCollector</artifactId>
+  			<version>0.5-atlassian-2</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 	   <repository>
 	    <id>jenkins-releases</id>
 	    <url>http://repo.jenkins-ci.org/releases/</url>
 	  </repository>
+	  <repository>
+    <id>opencast-public</id>
+    <url>http://repository.opencastproject.org/nexus/content/repositories/public/</url>
+  </repository>
 	</repositories>
 	<distributionManagement>
 	    <repository>
